✨ Add product, category pages

--- a/front/src/scss/app.scss
+++ b/front/src/scss/app.scss
@@ -21,6 +21,7 @@ Version: 1.0
 @import 'components/form';
 @import 'components/card';
 @import 'components/products';
+@import 'components/single-product';
 
 // Layout
 @import 'layout/sidebar';
