--- a/front/src/scss/components/_products.scss
+++ b/front/src/scss/components/_products.scss
@@ -7,6 +7,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+    margin-bottom: 30px;
 }
 
 .products-actions-left {
@@ -71,5 +72,163 @@
 
     &-active, &:hover {
         color: $light-grey-2;
+    }
+}
+
+.product-element {
+    margin-bottom: 20px;
+}
+
+.product {
+    color: $black-2;
+    border: 1px solid $light-grey;
+    border-radius: $border-radius;
+    background-color: $white;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 20px;
+    width: 100%;
+    transition: box-shadow 0.3s ease-in-out;
+
+    &:hover {
+        box-shadow: $box-shadow;
+    }
+}
+
+.product-id {
+    width: 5%;
+}
+
+.product-image {
+    width: 12%;
+    text-align: center;
+
+    img {
+        width: auto;
+        height: 64px;
+    }
+}
+
+.product-title {
+    flex-grow: 2;
+}
+
+.product-category {
+    flex-grow: 2;
+}
+
+.product-price {
+    width: 10%;
+
+    span:first-child {
+        display: none;
+    }
+}
+
+.product-quantity {
+    width: 6%;
+
+    span:first-child {
+        display: none;
+    }
+}
+
+.product-actions {
+    display: flex;
+    flex-direction: row;
+    width: 8%;
+    justify-content: flex-end;
+}
+
+.product-actions-delete,
+.product-actions-edit {
+    padding: 0px 6px;
+
+    a {
+        color: $black-2;
+
+        &:hover {
+            color: $main-color;
+        }
+    }
+}
+
+.products-grid-cards {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+
+    .product-element {
+        width: 33.33%;
+        padding: 10px;
+        margin-bottom: 0px;
+    }
+
+    .product {
+        display: block;
+        position: relative;
+    }
+
+    .product-id {
+        display: none;
+    }
+
+    .product-image {
+        width: inherit;
+        text-align: center;
+        margin-top: 20px;
+
+        img {
+            width: 70%;
+            height: auto;
+        }
+    }
+
+    .product-title {
+        font-size: 1em;
+        font-weight: 600;
+        color: $black;
+        margin-bottom: 3px;
+    }
+
+    .product-category {
+        margin-bottom: 6px;
+    }
+
+    .product-price {
+        width: inherit;
+        margin-bottom: 2px;
+
+        span:first-child {
+            display: inline;
+            font-weight: 600;
+        }
+    }
+
+    .product-quantity {
+        width: inherit;
+
+        span:first-child {
+            display: inline;
+            font-weight: 600;
+        }
+    }
+
+    .product-actions {
+        display: inline-block;
+        position: absolute;
+        width: auto;
+        top: 24px;
+        right: 24px;
+    }
+
+    .product-actions-delete,
+    .product-actions-edit {
+        display: inline-block;
+    }
+
+    .product-actions-edit {
+        padding-right: 0px;
     }
 }
