--- a/front/src/scss/layout/_sidebar.scss
+++ b/front/src/scss/layout/_sidebar.scss
@@ -40,5 +40,9 @@
             cursor: pointer;
             background-color: $second-color-hover;
         }
+
+        &.active {
+            background-color: $second-color-hover;
+        }
     }
 }
