--- a/App/Views/layouts/default.twig
+++ b/App/Views/layouts/default.twig
@@ -1,6 +1,65 @@
-{% include 'partials/header.twig' %}
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    {% block content %}
-    {% endblock %}
+        <title>{{ title(title) }}</title>
+        <meta name="description" content="{{ description is defined ? description : '' }}">
 
-{% include 'partials/footer.twig' %}
+        <!-- Links -->
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="{{ asset('css/app.min.css') }}">
+    </head>
+
+    <body>
+        <div class="sidebar">
+            <div class="sidebar-logo">
+                <a href="{{ url('admin/dashboard') }}">
+                    <img src="{{ asset('img/logo.png') }}" alt="Pokedex Manager">
+                </a>
+            </div>
+
+            <div class="sidebar-nav">
+                <nav>
+                    <ul>
+                        <li><a class="{{ page == 'dashboard' ? 'active' : '' }}" href="{{ url('admin/dashboard') }}" title="Dashboard"><i class="fa fa-tachometer" aria-hidden="true"></i> Dashboard</a></li>
+                        <li><a class="{{ page == 'products' ? 'active' : '' }}" href="{{ url('admin/products') }}" title="Products"><i class="fa fa-tags" aria-hidden="true"></i> Products</a></li>
+                        <li><a class="{{ page == 'categories' ? 'active' : '' }}" href="{{ url('admin/categories') }}" title="Categories"><i class="fa fa-anchor" aria-hidden="true"></i> Categories</a></li>
+                        <li><a class="{{ page == 'users' ? 'active' : '' }}" href="{{ url('admin/users') }}" title="Users"><i class="fa fa-users" aria-hidden="true"></i> Users</a></li>
+                        <li><a class="{{ page == 'reports' ? 'active' : '' }}" href="{{ url('admin/reports') }}" title="Reports"><i class="fa fa-file-text" aria-hidden="true"></i> Reports</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+
+        <div class="main">
+            <div class="main-header">
+                <div class="main-header-infos">
+                    <h1 class="main-header-title">Dashboard</h1>
+                    <span class="main-header-breadcrumb">{% block breadcrumb %}{% endblock %}</span>
+                </div>
+
+                <div class="main-header-session">
+                    <span class="main-header-session-user">Welcome {{ auth }}!</span>
+                    <a class="main-header-session-session" href="{{ url('signout') }}">Sign out</a>
+                </div>
+            </div>
+
+            <div class="main-content">
+
+            {% block content %}
+            {% endblock %}
+
+
+            </div>
+        </div>
+
+        <script src="{{ asset('js/app.min.js') }}"></script>
+
+        {% block extra_scripts %}
+        {% endblock %}
+    </body>
+</html>
