--- a/App/Views/pages/404.twig
+++ b/App/Views/pages/404.twig
@@ -1,12 +1,8 @@
-{% extends 'layouts/default.twig' %}
+{% extends 'layouts/blank.twig' %}
 
 {% block content %}
 
-    <div class="jumbotron">
-        <div class="container">
-            <h1 class="display-3">404 not found</h1>
-            <p>The page you're looking for doesn't exist or has been deleted.</p>
-        </div>
-    </div>
+    <h1>404 not found</h1>
+    <p>The page you're looking for doesn't exist or has been deleted.</p>
 
 {% endblock %}
