--- a/App/Views/layouts/default.twig
+++ b/App/Views/layouts/default.twig
@@ -38,7 +38,7 @@
         <div class="main">
             <div class="main-header">
                 <div class="main-header-infos">
-                    <h1 class="main-header-title">Dashboard</h1>
+                    <h1 class="main-header-title">{{ title }}</h1>
                     <span class="main-header-breadcrumb">{% block breadcrumb %}{% endblock %}</span>
                 </div>
 
