--- a/front/src/scss/app.scss
+++ b/front/src/scss/app.scss
@@ -22,6 +22,7 @@ Version: 1.0
 @import 'components/card';
 @import 'components/products';
 @import 'components/single-product';
+@import 'components/categories';
 
 // Layout
 @import 'layout/sidebar';
