--- a/front/src/scss/tools/_variables.scss
+++ b/front/src/scss/tools/_variables.scss
@@ -33,7 +33,9 @@ $success-color-hover: #43A047;
 
 // Box shadow
 $box-shadow: 0px 0px 18px 0px rgba(0, 0, 0, 0.05);
-$box-shadow-2: 0px 0px 6px 0px rgba(0, 0, 0, 0.2);
+$box-shadow-action: 0px 0px 20px 0px rgba(0, 0, 0, 0.14);
+$box-shadow-action-hover: 0px 0px 30px 0px rgba(0, 0, 0, 0.2);
+
 
 // Border radius
 $border-radius: 3px;
