--- a/front/src/scss/base/_base.scss
+++ b/front/src/scss/base/_base.scss
@@ -52,3 +52,37 @@ input:focus {
     background-color: $main-color;
     color: $white;
 }
+
+.main-action {
+    position: fixed;
+    bottom: 34px;
+    right: 34px;
+    width: 74px;
+    height: 74px;
+    border-radius: 50%;
+    box-shadow: $box-shadow-action;
+    transition: $transition;
+
+    &-success {
+        background-color: $success-color;
+
+        &:hover {
+            background-color: $success-color-hover;
+        }
+    }
+
+    &:hover {
+        box-shadow: $box-shadow-action-hover;
+    }
+
+    a {
+        display: block;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 1.3em;
+        color: $white;
+    }
+}
