✨ Add category add page

--- a/App/Views/pages/admin/categories.twig
+++ b/App/Views/pages/admin/categories.twig
@@ -29,7 +29,7 @@
         </div>
 
         <div class="main-action main-action-success">
-            <a href="{{ url('categories/add') }}" title="Add category"><i class="fa fa-plus" aria-hidden="true"></i></a>
+            <a href="{{ url('admin/categories/add') }}" title="Add category"><i class="fa fa-plus" aria-hidden="true"></i></a>
         </div>
     </div>
 {% endblock %}
