--- a/front/src/scss/app.scss
+++ b/front/src/scss/app.scss
@@ -23,6 +23,7 @@ Version: 1.0
 @import 'components/products';
 @import 'components/single-product';
 @import 'components/categories';
+@import 'components/errors';
 
 // Layout
 @import 'layout/sidebar';
