--- a/front/src/scss/base/_base.scss
+++ b/front/src/scss/base/_base.scss
@@ -62,6 +62,9 @@ input:focus {
     border-radius: 50%;
     box-shadow: $box-shadow-action;
     transition: $transition;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
     &-success {
         background-color: $success-color;
@@ -84,5 +87,19 @@ input:focus {
         justify-content: center;
         font-size: 1.3em;
         color: $white;
+    }
+
+    button {
+        display: block;
+        width: 100%;
+        height: 100%;
+        background: none;
+        border: none;
+        font-size: 1.3em;
+        color: $white;
+
+        &:hover {
+            cursor: pointer;
+        }
     }
 }
