✨ Add category edit page

--- a/App/Views/pages/admin/categories.twig
+++ b/App/Views/pages/admin/categories.twig
@@ -14,7 +14,7 @@
                             </div>
 
                             <div class="category-actions-edit">
-                                <a href="{{ url('categories/' ~ category.id ~ '/edit') }}">
+                                <a href="{{ url('admin/categories/' ~ category.id ~ '/edit') }}">
                                     <i class="fa fa-pencil" aria-hidden="true"></i>
                                 </a>
                             </div>
