✨ Add category delete page

--- a/App/Views/pages/admin/categories.twig
+++ b/App/Views/pages/admin/categories.twig
@@ -8,7 +8,7 @@
                     <div class="category">
                         <div class="category-actions">
                             <div class="category-actions-delete">
-                                <a href="{{ url('categories/' ~ category.id ~ '/delete') }}">
+                                <a href="{{ url('admin/categories/' ~ category.id ~ '/delete') }}">
                                     <i class="fa fa-trash" aria-hidden="true"></i>
                                 </a>
                             </div>
