--- a/App/Views/pages/admin/products.twig
+++ b/App/Views/pages/admin/products.twig
@@ -4,7 +4,7 @@
     <div class="products">
         <div class="products-actions">
             <div class="products-actions-left">
-                <span class="products-actions-count">128 items</span>
+                <span class="products-actions-count">{{ count }} item(s)</span>
 
                 <div class="products-actions-search">
                     <input type="search" name="search" id="search" placeholder="Search items...">
@@ -29,269 +29,55 @@
         </div>
 
         <div class="products-grid">
-            <div class="product-element">
-                <div class="product">
-                    <div class="product-id">
-                        <span>0001</span>
-                    </div>
-
-                    <div class="product-image">
-                        <img src="assets/img/macbookpro.png" alt="">
-                    </div>
-
-                    <div class="product-title">
-                        <span>Macbook Pro 15 pouces 2016</span>
-                    </div>
-
-                    <div class="product-category">
-                        <span>Ordinateurs Mac</span>
-                    </div>
-
-                    <div class="product-price">
-                        <span>Price: </span>
-                        <span>$2,899</span>
-                    </div>
-
-                    <div class="product-quantity">
-                        <span>Quantity:</span>
-                        <span>2876</span>
-                    </div>
-
-                    <div class="product-actions">
-                        <div class="product-actions-delete">
-                            <a href="#">
-                                <i class="fa fa-trash" aria-hidden="true"></i>
-                            </a>
+            {% for product in products %}
+                <div class="product-element">
+                    <div class="product">
+                        <div class="product-id">
+                            <span>{{ pad(product.id) }}</span>
                         </div>
 
-                        <div class="product-actions-edit">
-                            <a href="#">
-                                <i class="fa fa-pencil" aria-hidden="true"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="product-element">
-                <div class="product">
-                    <div class="product-id">
-                        <span>0001</span>
-                    </div>
-
-                    <div class="product-image">
-                        <img src="assets/img/macbookpro.png" alt="">
-                    </div>
-
-                    <div class="product-title">
-                        <span>Macbook Pro 15 pouces 2016</span>
-                    </div>
-
-                    <div class="product-category">
-                        <span>Ordinateurs Mac</span>
-                    </div>
-
-                    <div class="product-price">
-                        <span>Price: </span>
-                        <span>$2,899</span>
-                    </div>
-
-                    <div class="product-quantity">
-                        <span>Quantity:</span>
-                        <span>2876</span>
-                    </div>
-
-                    <div class="product-actions">
-                        <div class="product-actions-delete">
-                            <a href="#">
-                                <i class="fa fa-trash" aria-hidden="true"></i>
-                            </a>
+                        <div class="product-image">
+                            <img src="{{ product.media }}" alt="{{ product.title }}">
                         </div>
 
-                        <div class="product-actions-edit">
-                            <a href="#">
-                                <i class="fa fa-pencil" aria-hidden="true"></i>
-                            </a>
+                        <div class="product-title">
+                            <span>{{ product.title }}</span>
+                        </div>
+
+                        <div class="product-category">
+                            <span>{{ product.category }}</span>
+                        </div>
+
+                        <div class="product-price">
+                            <span>Price: </span>
+                            <span>${{ product.price }}</span>
+                        </div>
+
+                        <div class="product-quantity">
+                            <span>Quantity:</span>
+                            <span>{{ product.quantity }}</span>
+                        </div>
+
+                        <div class="product-actions">
+                            <div class="product-actions-delete">
+                                <a href="{{ url('admin/products/' ~ category.id ~ '/delete') }}">
+                                    <i class="fa fa-trash" aria-hidden="true"></i>
+                                </a>
+                            </div>
+
+                            <div class="product-actions-edit">
+                                <a href="{{ url('admin/products/' ~ category.id ~ '/edit') }}">
+                                    <i class="fa fa-pencil" aria-hidden="true"></i>
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
+            {% endfor %}
+        </div>
 
-            <div class="product-element">
-                <div class="product">
-                    <div class="product-id">
-                        <span>0001</span>
-                    </div>
-
-                    <div class="product-image">
-                        <img src="assets/img/macbookpro.png" alt="">
-                    </div>
-
-                    <div class="product-title">
-                        <span>Macbook Pro 15 pouces 2016</span>
-                    </div>
-
-                    <div class="product-category">
-                        <span>Ordinateurs Mac</span>
-                    </div>
-
-                    <div class="product-price">
-                        <span>Price: </span>
-                        <span>$2,899</span>
-                    </div>
-
-                    <div class="product-quantity">
-                        <span>Quantity:</span>
-                        <span>2876</span>
-                    </div>
-
-                    <div class="product-actions">
-                        <div class="product-actions-delete">
-                            <a href="#">
-                                <i class="fa fa-trash" aria-hidden="true"></i>
-                            </a>
-                        </div>
-
-                        <div class="product-actions-edit">
-                            <a href="#">
-                                <i class="fa fa-pencil" aria-hidden="true"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="product-element">
-                <div class="product">
-                    <div class="product-id">
-                        <span>0001</span>
-                    </div>
-
-                    <div class="product-image">
-                        <img src="assets/img/macbookpro.png" alt="">
-                    </div>
-
-                    <div class="product-title">
-                        <span>Macbook Pro 15 pouces 2016</span>
-                    </div>
-
-                    <div class="product-category">
-                        <span>Ordinateurs Mac</span>
-                    </div>
-
-                    <div class="product-price">
-                        <span>Price: </span>
-                        <span>$2,899</span>
-                    </div>
-
-                    <div class="product-quantity">
-                        <span>Quantity:</span>
-                        <span>2876</span>
-                    </div>
-
-                    <div class="product-actions">
-                        <div class="product-actions-delete">
-                            <a href="#">
-                                <i class="fa fa-trash" aria-hidden="true"></i>
-                            </a>
-                        </div>
-
-                        <div class="product-actions-edit">
-                            <a href="#">
-                                <i class="fa fa-pencil" aria-hidden="true"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="product-element">
-                <div class="product">
-                    <div class="product-id">
-                        <span>0001</span>
-                    </div>
-
-                    <div class="product-image">
-                        <img src="assets/img/macbookpro.png" alt="">
-                    </div>
-
-                    <div class="product-title">
-                        <span>Macbook Pro 15 pouces 2016</span>
-                    </div>
-
-                    <div class="product-category">
-                        <span>Ordinateurs Mac</span>
-                    </div>
-
-                    <div class="product-price">
-                        <span>Price: </span>
-                        <span>$2,899</span>
-                    </div>
-
-                    <div class="product-quantity">
-                        <span>Quantity:</span>
-                        <span>2876</span>
-                    </div>
-
-                    <div class="product-actions">
-                        <div class="product-actions-delete">
-                            <a href="#">
-                                <i class="fa fa-trash" aria-hidden="true"></i>
-                            </a>
-                        </div>
-
-                        <div class="product-actions-edit">
-                            <a href="#">
-                                <i class="fa fa-pencil" aria-hidden="true"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="product-element">
-                <div class="product">
-                    <div class="product-id">
-                        <span>0001</span>
-                    </div>
-
-                    <div class="product-image">
-                        <img src="assets/img/macbookpro.png" alt="">
-                    </div>
-
-                    <div class="product-title">
-                        <span>Macbook Pro 15 pouces 2016</span>
-                    </div>
-
-                    <div class="product-category">
-                        <span>Ordinateurs Mac</span>
-                    </div>
-
-                    <div class="product-price">
-                        <span>Price: </span>
-                        <span>$2,899</span>
-                    </div>
-
-                    <div class="product-quantity">
-                        <span>Quantity:</span>
-                        <span>2876</span>
-                    </div>
-
-                    <div class="product-actions">
-                        <div class="product-actions-delete">
-                            <a href="#">
-                                <i class="fa fa-trash" aria-hidden="true"></i>
-                            </a>
-                        </div>
-
-                        <div class="product-actions-edit">
-                            <a href="#">
-                                <i class="fa fa-pencil" aria-hidden="true"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
+        <div class="main-action main-action-success">
+            <a href="{{ url('admin/products/add') }}" title="Add product"><i class="fa fa-plus" aria-hidden="true"></i></a>
         </div>
     </div>
 {% endblock %}
