🐛 Update products list

--- a/App/Views/pages/admin/products.twig
+++ b/App/Views/pages/admin/products.twig
@@ -60,13 +60,13 @@
 
                         <div class="product-actions">
                             <div class="product-actions-delete">
-                                <a href="{{ url('admin/products/' ~ category.id ~ '/delete') }}">
+                                <a href="{{ url('admin/products/' ~ product.id ~ '/delete') }}">
                                     <i class="fa fa-trash" aria-hidden="true"></i>
                                 </a>
                             </div>
 
                             <div class="product-actions-edit">
-                                <a href="{{ url('admin/products/' ~ category.id ~ '/edit') }}">
+                                <a href="{{ url('admin/products/' ~ product.id ~ '/edit') }}">
                                     <i class="fa fa-pencil" aria-hidden="true"></i>
                                 </a>
                             </div>
