--- a/App/Views/pages/admin/products_add.twig
+++ b/App/Views/pages/admin/products_add.twig
@@ -12,7 +12,7 @@
     {% endif %}
 
     <div class="single-product">
-        <form action="#" method="post">
+        <form action="#" method="post" enctype="multipart/form-data">
             <div class="col-md-8">
                 <div class="card">
                     <div class="form-control">
@@ -38,6 +38,13 @@
                                 <option value="{{ category.id }}">{{ category.title }}</option>
                             {% endfor %}
                         </select>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="form-control">
+                        <label for="media">Media</label>
+                        <input type="file" name="media" id="media" class="{{ errors.media ? 'errors-border' : '' }}">
                     </div>
                 </div>
 
