--- a/App/Views/pages/admin/products.twig
+++ b/App/Views/pages/admin/products.twig
@@ -37,7 +37,7 @@
                         </div>
 
                         <div class="product-image">
-                            <img src="{{ product.media }}" alt="{{ product.title }}">
+                            <img src="{{ url('uploads/' ~ product.media) }}" alt="{{ product.title }}">
                         </div>
 
                         <div class="product-title">
