--- a/App/Views/pages/admin/categories.twig
+++ b/App/Views/pages/admin/categories.twig
@@ -3,29 +3,33 @@
 {% block content %}
     <div class="categories">
         <div class="categories-grid">
-            {% for category in categories %}
-                <div class="category-element">
-                    <div class="category">
-                        <div class="category-actions">
-                            <div class="category-actions-delete">
-                                <a href="{{ url('admin/categories/' ~ category.id ~ '/delete') }}">
-                                    <i class="fa fa-trash" aria-hidden="true"></i>
-                                </a>
+            {% if categories %}
+                {% for category in categories %}
+                    <div class="category-element">
+                        <div class="category">
+                            <div class="category-actions">
+                                <div class="category-actions-delete">
+                                    <a href="{{ url('admin/categories/' ~ category.id ~ '/delete') }}">
+                                        <i class="fa fa-trash" aria-hidden="true"></i>
+                                    </a>
+                                </div>
+
+                                <div class="category-actions-edit">
+                                    <a href="{{ url('admin/categories/' ~ category.id ~ '/edit') }}">
+                                        <i class="fa fa-pencil" aria-hidden="true"></i>
+                                    </a>
+                                </div>
                             </div>
 
-                            <div class="category-actions-edit">
-                                <a href="{{ url('admin/categories/' ~ category.id ~ '/edit') }}">
-                                    <i class="fa fa-pencil" aria-hidden="true"></i>
-                                </a>
-                            </div>
+                            <h2 class="category-title">{{ category.title }}</h2>
+                            <p class="category-description">{{ category.description }}</p>
+                            <span>Created </span><span class="category-creation moment-date">{{ category.created_at }}</span>
                         </div>
-
-                        <h2 class="category-title">{{ category.title }}</h2>
-                        <p class="category-description">{{ category.description }}</p>
-                        <span>Created </span><span class="category-creation moment-date">{{ category.created_at }}</span>
                     </div>
-                </div>
-            {% endfor %}
+                {% endfor %}
+            {% else %}
+                <p>No categories to show. Click "Add category" button to create a new one.</p>
+            {% endif %}
         </div>
 
         <div class="main-action main-action-success">
