--- a/App/Views/pages/admin/reports.twig
+++ b/App/Views/pages/admin/reports.twig
@@ -3,24 +3,28 @@
 {% block content %}
     <div class="reports">
         <div class="reports-grid">
-            {% for report in reports %}
-                <div class="report-element">
-                    <div class="report">
-                        <h2 class="report-title">{{ report.title }}</h2>
-                        <p class="report-date moment-date">{{ report.created_at }}</p>
+            {% if reports %}
+                {% for report in reports %}
+                    <div class="report-element">
+                        <div class="report">
+                            <h2 class="report-title">{{ report.title }}</h2>
+                            <p class="report-date moment-date">{{ report.created_at }}</p>
 
-                        <div class="report-actions">
-                            <a href="{{ url('uploads/' ~ report.file) }}">
-                                <i class="fa fa-download" aria-hidden="true"></i> Download
-                            </a>
+                            <div class="report-actions">
+                                <a href="{{ url('uploads/' ~ report.file) }}">
+                                    <i class="fa fa-download" aria-hidden="true"></i> Download
+                                </a>
 
-                            <a href="{{ url('admin/reports/' ~ report.id ~ '/delete') }}">
-                                <i class="fa fa-trash" aria-hidden="true"></i> Delete
-                            </a>
+                                <a href="{{ url('admin/reports/' ~ report.id ~ '/delete') }}">
+                                    <i class="fa fa-trash" aria-hidden="true"></i> Delete
+                                </a>
+                            </div>
                         </div>
                     </div>
-                </div>
-            {% endfor %}
+                {% endfor %}
+            {% else %}
+                <p>No reports to show. Click "Add report" button to create a new one.</p>
+            {% endif %}
         </div>
 
         <div class="main-action main-action-success">
