✨ Add stats api endpoint

--- a/front/src/scss/app.scss
+++ b/front/src/scss/app.scss
@@ -25,6 +25,7 @@ Version: 1.0
 @import 'components/categories';
 @import 'components/users';
 @import 'components/reports';
+@import 'components/dashboard';
 @import 'components/errors';
 
 // Layout
