💄 Update global UI

--- a/App/Views/pages/admin/dashboard.twig
+++ b/App/Views/pages/admin/dashboard.twig
@@ -34,7 +34,7 @@
     <div class="top-facts">
         <div class="col-md-7">
             <div class="card">
-                <h3>References to follow <span class="sub">(low quantity)</span></h3>
+                <h3>References to follow <span class="sub">(low quantities)</span></h3>
                 <table>
                     <thead>
                         <tr>
