--- a/App/Views/pages/admin/products.twig
+++ b/App/Views/pages/admin/products.twig
@@ -18,6 +18,7 @@
                         <option value="id" selected>ID</option>
                         <option value="price">Price</option>
                         <option value="quantity">Quantity</option>
+                        <option value="category">Category</option>
                     </select>
                 </div>
 
