--- a/front/src/scss/tools/_variables.scss
+++ b/front/src/scss/tools/_variables.scss
@@ -22,14 +22,14 @@ $main-color-hover: #304FFE;
 $second-color: #2A3848;
 $second-color-hover: #232f3d;
 
-$danger-color: #E53935;
-$danger-color-hover: #D32F2F;
+$danger-color: #F44336;
+$danger-color-hover: #E53935;
 
 $warning-color: #FB8C00;
 $warning-color-hover: #F57C00;
 
-$success-color: #4CAF50;
-$success-color-hover: #43A047;
+$success-color: #2ecc71;
+$success-color-hover: #2ab665;
 
 // Box shadow
 $box-shadow: 0px 0px 18px 0px rgba(0, 0, 0, 0.05);
